--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 15vh;
+  border-bottom: 3px black solid;
 
   @media (min-width: 425px) {
     height: 20vh;
@@ -65,7 +66,7 @@ body {
     padding: 4px 8px;
     background-color: rgb(30, 141, 226);
     color: rgb(255, 255, 255);
-    
+
     @media (min-width: 425px) {
       font-size: 1.25rem;
       padding: 8px 16px;
@@ -88,9 +89,35 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 15vh;
-  background-color: rgb(200, 200, 200);
+  background-color: rgb(244, 244, 244);
 
   @media (min-width: 425px) {
     height: 20vh;
   }
+}
+
+.contact-bar {
+}
+
+.form-bar {
+  &-top {
+    display: flex;
+  }
+  @media (min-width: 425px) {
+    justify-content: space-around;
+  }
+
+  &-bot {
+    display: flex;
+  }
+  @media (min-width: 425px) {
+    justify-content: space-around;
+  }
+
+
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
 }
